@@ -1,0 +1,4 @@
+Foo has been called with args: []
+Foo has been called with args: [c, b, a]
+Foo has been called with args: []
+3
